--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,13 @@ table {
   margin: 10px;
 }
 
+#cv_container {
+  width: 65%;
+  margin: 10px;
+  height: 70em;
+  background-color: white;
+}
+
 .general_info,
 .form_div {
   background-color: white;
@@ -167,4 +174,71 @@ table {
 
 .start_end {
   display: flex;
+}
+
+.cv_header {
+  color: white;
+  display: flex;
+  background-color: var(--default-primary-blue);
+  width: 100%;
+  height: 150px;
+  align-items: center;
+  flex-direction: column;
+}
+
+.cv_full_name {
+  margin-top: 20px;
+  font-size: 4em;
+}
+
+.cv_contact {
+  margin-top: 15px;
+  font-size: 1.3em;
+}
+
+.section_header {
+  display: flex;
+  background-color: lightgrey;
+  color: var(--default-primary-blue);
+  padding: 8px;
+  margin-left: 25px;
+  margin-right: 25px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+  justify-content: center;
+  font-size: 2.2em;
+  font-weight: 700;
+}
+
+.education_details {
+  display: flex;
+  flex-direction: column;
+  margin-left: 25px;
+  margin-right: 25px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  height: 13em;
+}
+
+.degree {
+  font-style: italic;
+  width: 100%;
+  font-size: 1.2em;
+  font-weight: 300;
+}
+
+.school_dates_container {
+  display: flex;
+}
+
+.school {
+  width: 82%;
+  font-size: 1.4em;
+  font-weight: 700;
+}
+
+.dates {
+  font-size: 1.1em;
+  font-weight: 300;
 }
